fix : img playstation_now e _plus visibili sotto -sm breakpoint

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,8 @@ main{
 .nuove_uscite img,
 .esplora_ps4 img,
 .playstation_plus img,
-.sconti_store img{
+.sconti_store img,
+.playstation_now img{
     width: 100%;
     /* height: 100%; */
 }
@@ -59,7 +60,9 @@ main{
     background-color: #bebcbb;
 }
 
-
+.playstation_now{
+    background-color: #161c3b;
+}
 
 
 
